// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChirpCard for deletion render correct for a deleted chirp 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "row",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "width": 60,
        }
      }
    >
      ProfileIcon
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Object {
            "fontSize": 18,
            "marginTop": 7,
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Douglas Adams
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "gray",
            "fontSize": 18,
            "paddingBottom": 20,
            "paddingTop": 10,
            "width": 520,
          }
        }
      >
        This chirp was deleted
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "fontSize": 18,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text>
              0
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-end",
            "marginTop": 10,
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 25,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp ?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
]
`;

exports[`ChirpCard for deletion renders correctly for non-sender 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "row",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "width": 60,
        }
      }
    >
      ProfileIcon
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Object {
            "fontSize": 18,
            "marginTop": 7,
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Douglas Adams
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 18,
            "paddingBottom": 20,
            "paddingTop": 10,
            "width": 520,
          }
        }
      >
        Don't panic.
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "fontSize": 18,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="thumbs-up"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text>
              1
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="thumbs-down"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text>
              0
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="heart"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text>
              0
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text>
              0
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-end",
            "marginTop": 10,
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 25,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp ?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
]
`;

exports[`ChirpCard for deletion renders correctly for sender 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "row",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "width": 60,
        }
      }
    >
      ProfileIcon
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Object {
            "fontSize": 18,
            "marginTop": 7,
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Douglas Adams
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 18,
            "paddingBottom": 20,
            "paddingTop": 10,
            "width": 520,
          }
        }
      >
        Don't panic.
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "fontSize": 18,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="thumbs-up"
          >
            <Text />
          </View>
          <Text>
              1
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="thumbs-down"
          >
            <Text />
          </View>
          <Text>
              0
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="heart"
          >
            <Text />
          </View>
          <Text>
              0
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <Text />
          <Text>
              0
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-end",
            "marginTop": 10,
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Image
          accessibilityLabel="delete"
          source={1}
          style={
            Object {
              "height": 26,
              "width": 26,
            }
          }
        />
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 25,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp ?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
]
`;

exports[`ChirpCard for reaction renders correctly with reaction 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "row",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "width": 60,
        }
      }
    >
      ProfileIcon
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Object {
            "fontSize": 18,
            "marginTop": 7,
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Douglas Adams
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 18,
            "paddingBottom": 20,
            "paddingTop": 10,
            "width": 520,
          }
        }
      >
        Don't panic.
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "fontSize": 18,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="thumbs-up"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text>
              1
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="thumbs-down"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text>
              0
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="heart"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text>
              0
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text>
              0
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-end",
            "marginTop": 10,
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Image
          accessibilityLabel="delete"
          source={1}
          style={
            Object {
              "height": 26,
              "width": 26,
            }
          }
        />
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 25,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp ?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
]
`;

exports[`ChirpCard for reaction renders correctly without reaction 1`] = `
Array [
  <View
    style={
      Object {
        "borderColor": "gray",
        "borderTopWidth": 0,
        "borderWidth": 1,
        "flexDirection": "row",
        "padding": 10,
        "width": 600,
      }
    }
  >
    <View
      style={
        Object {
          "width": 60,
        }
      }
    >
      ProfileIcon
    </View>
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Object {
            "fontSize": 18,
            "marginTop": 7,
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Anonymous
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 18,
            "paddingBottom": 20,
            "paddingTop": 10,
            "width": 520,
          }
        }
      >
        Ignore me
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "fontSize": 18,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="thumbs-up"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text>
              0
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="thumbs-down"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text>
              0
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="heart"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text>
              0
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 10,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "black",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text>
              0
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-end",
            "marginTop": 10,
          }
        }
      >
        <time
          dateTime="2020-12-31T23:00:00.000Z"
          title="2020-12-31 23:00"
        >
          4 months ago
        </time>
      </View>
    </View>
  </View>,
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": "auto",
          "width": 550,
        }
      }
    >
      <View
        style={
          Object {
            "borderBottomWidth": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "flex-start",
              "fontSize": 25,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "padding": 20,
              "paddingLeft": 10,
              "textAlign": "center",
            }
          }
        >
          Chirp deletion
        </Text>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "left",
          }
        }
      >
        Are you sure you want to delete this chirp ?
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "row",
            "paddingBottom": 20,
          }
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginHorizontal": 50,
              "marginVertical": 10,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                disabled={false}
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>,
]
`;
